# OpenTinker

./: .bash_history  .gitignore  =4.45.0  README.md  opsd.md  programs.md  progress.md  pyproject.toml  run.sh  run_grpo.sh  run_grpo_wm.sh  scheduler_users.db  setup.sh
.claude/: .nfs000000000dfd80a500000ad5
.config/vllm/: usage_stats.json
.nv/ComputeCache/: index
data/: prepare_opsd_math_data.py  read.py
data/opsd_math/: conversion_report.json
docs/: 2602.04942v3.txt  README_RLTF_SD.md  alfworld_multiturn.md  android_world_multiturn.md  gomoku_multiturn.md  math_distill.md  math_lora_singleturn.md  math_multiturn.md  math_opsd.md  math_opsd_paper_repro.md  math_singleturn.md  sciworld_multiturn.md  swegym_multiturn.md  vlm_geo3k_multiturn.md  vlm_geo3k_singleturn.md
opentinker/: test_geo3k_data.py
opentinker/backend_patch/: __init__.py
opentinker/client/: alfworld_eval.py  alfworld_inference.py  alfworld_rl.py  android_world_rl.py  distill_rl.py  geo3k_rl.py  geo3k_tool_rl.py  gomoku_inference.py  (+12 more)
traces/: trace_006643e2.json  trace_012ae1e0.json  trace_0287e610.json  trace_0d76dc44.json  trace_0dd5b118.json  trace_107295fb.json  trace_14086302.json  trace_16f679d8.json  trace_1b274636.json  trace_2119a05e.json  trace_25153f56.json  trace_269bcaa6.json  trace_280ced25.json  trace_2addfaff.json  trace_2e97b3d1.json  trace_328d582c.json  trace_32eb0237.json  trace_34d82aff.json  trace_3557e2f8.json  trace_36dc800b.json  trace_36fffa14.json  trace_3bc530ab.json  trace_3be4ca65.json  trace_3c59a360.json  trace_3ebb2c54.json  trace_408332a3.json  trace_4552b942.json  trace_463f8985.json  trace_4786c15e.json  trace_4c6b0413.json  trace_4db6ad8e.json  trace_4f53e029.json  trace_50161933.json  trace_50237c20.json  trace_51cc2394.json  trace_52926434.json  trace_52ae2411.json  trace_566d1770.json  trace_59dcc367.json  trace_5ba584c9.json  (+88 more)
(+244 files in other folders)
